[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaomi-vacuum"
version = "0.1.0"
description = "Local control for Xiaomi/Dreame robot vacuums via MIoT protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Amir Ghasemi" }]
dependencies = [
    "python-miio>=0.5.12",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/amirghm/Xiaomi-Vacuum-Controller"
Issues = "https://github.com/amirghm/Xiaomi-Vacuum-Controller/issues"

[tool.setuptools.packages.find]
include = ["xiaomi_vacuum*"]
